// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Using this guide renders using this guide banner correctly 1`] = `
<div
  className="UsingThisGuideBanner__BannerWrapper-adj8ti-0 fqaMxX"
>
  <div
    className="UsingThisGuideBanner__HeaderWrapper-adj8ti-5 fwRgqU"
  >
    <h2
      className="headings__H2-sc-1xfiggv-1 UsingThisGuideBanner__UsingThisGuideTitle-adj8ti-2 cFNEOU"
    >
      Using This Guide
    </h2>
  </div>
  <div
    className="UsingThisGuideBanner__BodyWrapper-adj8ti-6 gienZp"
  >
    <picture>
      <source
        media="(max-width: 50em)"
        srcSet="banner_mobile.png"
      />
      <img
        alt="The image presents the structure of study guides. The first element of each block summarizes, clarifies, or enriches key content. The second element is taken directly from the book. On the left side, there is a color label depending on the content."
        className="UsingThisGuideBanner__BannerImage-adj8ti-1 lebSIh"
        src="banner.png"
        tabIndex={0}
      />
    </picture>
  </div>
  <button
    aria-label="Closes the image describing the structure of study guides."
    className="Button__PlainButton-ayg7nk-2 UsingThisGuideBanner__CloseIconButton-adj8ti-3 bnGaoD"
    data-analytics-disable-track={true}
    data-testid="close-utg"
    onClick={[MockFunction]}
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-sc-ea9ulj-0 gWDkVc UsingThisGuideBanner__CloseIcon-adj8ti-4 jtVjLX"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3l105.4 105.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256l105.3-105.4z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Using this guide renders using this guide button correctly (when banner closed) 1`] = `
<button
  aria-label="Using This Guide"
  className="Button__PlainButton-ayg7nk-2 UsingThisGuideButton__UsingThisGuideButtonWrapper-bu0xmw-2 hHwOGT"
  data-analytics-disable-track={true}
  onClick={[MockFunction]}
>
  <div
    className="UsingThisGuideButton__UsingThisGuideButtonInnerStyles-bu0xmw-1 iGMoSS"
    tabIndex={-1}
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-sc-ea9ulj-0 gWDkVc UsingThisGuideButton__QuestionIcon-bu0xmw-0 hHPBbh"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256 256-114.6 256-256S397.4 0 256 0zm0 464c-114.7 0-208-93.31-208-208S141.3 48 256 48s208 93.31 208 208-93.3 208-208 208zm0-128c-18 0-32 14-32 32s13.1 32 32 32c17.1 0 32-14 32-32s-14.9-32-32-32zm33.1-208H238c-39 0-70 31-70 70 0 13 11 24 24 24s24-11 24-24c0-12 9.1-22 21.1-22h51.1c12.9 0 23.8 10 23.8 22 0 8-4 14.1-11 18.1L244 251c-8 5-12 13-12 21v16c0 13 11 24 24 24s24-11 24-24v-2l45.1-28c21-13 34-36 34-60 .9-39-30.1-70-70-70z"
        fill="currentColor"
      />
    </svg>
    <span
      className="UsingThisGuideButton__UsingThisGuideText-bu0xmw-3 dKabOj"
    >
      Using This Guide
    </span>
  </div>
</button>
`;

exports[`Using this guide renders using this guide button correctly (when banner open) 1`] = `
<button
  aria-label="Using This Guide"
  className="Button__PlainButton-ayg7nk-2 UsingThisGuideButton__UsingThisGuideButtonWrapper-bu0xmw-2 gdZrfW"
  data-analytics-disable-track={true}
  onClick={[MockFunction]}
>
  <div
    className="UsingThisGuideButton__UsingThisGuideButtonInnerStyles-bu0xmw-1 doDlsO"
    tabIndex={-1}
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-sc-ea9ulj-0 gWDkVc UsingThisGuideButton__QuestionIcon-bu0xmw-0 hHPBbh"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256 256-114.6 256-256S397.4 0 256 0zm0 464c-114.7 0-208-93.31-208-208S141.3 48 256 48s208 93.31 208 208-93.3 208-208 208zm0-128c-18 0-32 14-32 32s13.1 32 32 32c17.1 0 32-14 32-32s-14.9-32-32-32zm33.1-208H238c-39 0-70 31-70 70 0 13 11 24 24 24s24-11 24-24c0-12 9.1-22 21.1-22h51.1c12.9 0 23.8 10 23.8 22 0 8-4 14.1-11 18.1L244 251c-8 5-12 13-12 21v16c0 13 11 24 24 24s24-11 24-24v-2l45.1-28c21-13 34-36 34-60 .9-39-30.1-70-70-70z"
        fill="currentColor"
      />
    </svg>
    <span
      className="UsingThisGuideButton__UsingThisGuideText-bu0xmw-3 dKabOj"
    >
      Using This Guide
    </span>
  </div>
</button>
`;
